# Data-Engineering-Project

./: .gitignore  Code.ipynb  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  rapport data.docx  rapport.docx  ~$pport data.docx
mlruns/: mlflow.db
notebooks/: 01_data_preparation.ipynb  02_model_training.ipynb
src/: data_prep.py  model_utils.py  server.py
src/mlFlow/: MLflowTracker.py
tests/: test_api.py
